Fix course date visibility

--- a/src/app/styles/Card.module.css
+++ b/src/app/styles/Card.module.css
@@ -262,9 +262,9 @@
   padding-right: 0;
   padding-left: 0;
   position: absolute;
-  right: -160px;
+  right: -180px;
   top: 0;
-  width: 140px;
+  width: 160px;
 }
 
 .timelineItem:nth-child(even) .timelineDate {
@@ -272,9 +272,9 @@
   padding-right: 0;
   padding-left: 0;
   position: absolute;
-  left: -160px;
+  left: -180px;
   top: 0;
-  width: 140px;
+  width: 160px;
 }
 
 .timelineItem:nth-child(odd) .timelineContent {
